add page navigation with div id

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
   </head>
   <body>
 
-   <h1>Broadway Design</h1>
+   <div id="home">
+     <h1>Broadway Design</h1>
+   </div>
 
-   <h2>Our Process</h2>
+   <ul>
+     <ol><a href="#home">Home</a></ol>
+     <ol><a href="#process">Process</a></ol>
+     <ol><a href="#work">Work</a></ol>
+     <ol><a href="#team">Team</a></ol>
+     <ol><a href="#contact">Contact</a></ol>
+   </ul>
+
+   <div id="process">
+     <h2>Our Process</h2>
+   </div>
 
    <h3>Indentify</h3>
 
@@ -26,19 +38,26 @@
 
    <h4>Designed in New York</h4>
 
-   <h3>Portfolio</h3>
+   <div id="work">
+     <h3>Portfolio</h3>
+   </div>
 
    <p>Coming Soon</p>
 
-   <h3>Team</h3>
+   <div id="team">
+     <h3>Team</h3>
+   </div>
 
    <p>We're Hiring!</p>
 
-   <h3>Contact</h3>
+   <div id="contact">
+     <h3>Contact</h3>
+   </div>
 
    <p>Phone: (555)-555-5555</p>
    <p>E-mail: test@example.com</p>
    <p>Twitter: @test</p>
 
   </body>
+
 </html>
