add footer in html - needs some adjusting

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
    <p>E-mail: test@example.com</p>
    <p>Twitter: @test</p>
 
+   <footer>
+     <div>© Broadway 2017
+       <div>
+         <a href="#home">Home</a>
+         <a href="#process">Process</a>
+         <a href="#work">Work</a>
+         <a href="#team">Team</a>
+         <a href="#contact">Contact</a>
+       </div>
+     </div>
+   </footer>
+
   </body>
 
 </html>
