--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>Broadway</title>
 
-    <link rel="stylesheet" href="/resources/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
 
+  <header class="header">
    <div id="home">
      <h1>Broadway Design</h1>
    </div>
@@ -19,6 +20,9 @@
      <ol><a href="#team">Team</a></ol>
      <ol><a href="#contact">Contact</a></ol>
    </ul>
+
+  /<header>
+
 
    <div id="process">
      <h2>Our Process</h2>
@@ -59,7 +63,7 @@
    <p>Twitter: @test</p>
 
    <footer>
-     <div>© Broadway 2017
+     <div><h5>© Broadway 2017</h5>
        <div>
          <a href="#home">Home</a>
          <a href="#process">Process</a>
