--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
 
-  <header class="header">
-   <div id="home">
+   <div id="home"></div>
+  <header class="bgimage">
+
      <h1>Broadway Design</h1>
-   </div>
+
 
    <ul>
      <ol><a href="#home">Home</a></ol>
@@ -21,26 +22,32 @@
      <ol><a href="#contact">Contact</a></ol>
    </ul>
 
-  /<header>
+ </header>
 
 
    <div id="process">
      <h2>Our Process</h2>
    </div>
 
+     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="indentify">
+
    <h3>Indentify</h3>
 
    <p>We focus on the most important details.</p>
+
+     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="understand">
 
    <h3>Understand</h3>
 
    <p>We study our projects inside and out.</p>
 
+     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="execute">
+
    <h3>Execute</h3>
 
    <p>We put everything we have into our work.</p>
 
-   <h4>Designed in New York</h4>
+   <h4 class="bgimage">Designed in New York</h4>
 
    <div id="work">
      <h3>Portfolio</h3>
