completed css and html

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
 
    <div id="home"></div>
-  <header class="bgimage">
+  <header class="headerimage">
 
      <h1>Broadway Design</h1>
 
+    <h6>
+       <a class="hlinks" href="#home">Home</a><br><br>
+       <a class="hlinks" href="#process">Process</a><br><br>
+       <a class="hlinks" href="#work">Work</a><br><br>
+       <a class="hlinks" href="#team">Team</a><br><br>
+       <a class="hlinks" href="#contact">Contact</a>
+   </h6>
 
-   <ul>
-     <ol><a href="#home">Home</a></ol>
-     <ol><a href="#process">Process</a></ol>
-     <ol><a href="#work">Work</a></ol>
-     <ol><a href="#team">Team</a></ol>
-     <ol><a href="#contact">Contact</a></ol>
-   </ul>
 
  </header>
 
@@ -70,15 +70,15 @@
    <p>Twitter: @test</p>
 
    <footer>
-     <div><h5>© Broadway 2017</h5>
-       <div>
-         <a href="#home">Home</a>
-         <a href="#process">Process</a>
-         <a href="#work">Work</a>
-         <a href="#team">Team</a>
-         <a href="#contact">Contact</a>
-       </div>
-     </div>
+      <h5>© Broadway 2017
+       <span>
+         <a class="hlinks" href="#home">Home</a>
+         <a class="hlinks" href="#process">Process</a>
+         <a class="hlinks" href="#work">Work</a>
+         <a class="hlinks" href="#team">Team</a>
+         <a class="hlinks" href="#contact">Contact</a>
+       </span>
+    </h5>
    </footer>
 
   </body>
